2012-10-07  Charlie Zender  <zender@uci.edu>

	* Die when user attempts --mk_rec_dmn with non-existent dimension

	* Fix mistaken handling of return values from nc_inq_unlimdim()
	which caused ncks --fix_rec_dmn to fail. Bug introduced 20111130
	but caught only now because fix_rec_dmn was never
	regression-tested.

2012-10-06  Charlie Zender  <zender@uci.edu>

	* Use nco_fmt_sng_printf_subst() to replace user-specified string
	when missing values encountered. rx needs work.

	* Add --no_blank switch to fix borken regression tests

	* ncks: print underscore ("_") instead of missing value

2012-10-05  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.2 release procedure:
 	Changes since nco-4_2_1: ncks groups, hdr_pad, NULs
	cd ~/nco;cvs tag -d nco-4_2_2;cvs tag -d nco-4_2_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.2 release"
	cvs tag -c nco-4_2_2;cvs tag -c nco-4_2_2-1

2012-09-28  Pedro Vicente  <pvicente@uci.edu>

        * ncks: do not create empty groups

2012-09-22  Pedro Vicente  <pvicente@uci.edu>

        * ncks: print variable's data for recursively nested netCDF4 files

2012-09-19  Pedro Vicente  <pvicente@uci.edu>

        * ncks: -G option prints extra dimension information with -D 4

2012-09-11  Charlie Zender  <zender@uci.edu>

	* Remove unused nbr_dmn_fl from nco_cnk_sz_set()

	* Tweak i18n machinery

2012-09-10  Charlie Zender  <zender@uci.edu>

	* Add median filter ncmdn

	* Refine DRN/MRO documentation

2012-09-09  Charlie Zender  <zender@uci.edu>

	* Improve diagnostics in nco_dfl_case_nc_type_err() error message

2012-09-07  Charlie Zender  <zender@uci.edu>

	* Add filters ncmax, ncavg, ncrng

2012-09-05  Pedro Vicente  <pvicente@uci.edu>

        * ncks: implement -c (extract coordinate variables) for group hierarchies

2012-09-04  Charlie Zender  <zender@uci.edu>

	* nco_att_cpy() now attempts to copy array-valued missing values
	Attempt will likely fail, but some old files have these arrays,
	and older versions of netCDF allow it to succeed.